Improved profile selection and user experience